<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:orientation="vertical">


    <ScrollView android:id="@+id/scrollViewRooms"
    android:layout_width="match_parent"

     android:layout_height="420dp">


    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >



        <LinearLayout
            android:id="@+id/allfragmentsContainer"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">




        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnAdd"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="12dp"
                android:padding="20dp"
                android:text="@string/add_room" />
        </RelativeLayout>


    </LinearLayout>
    </ScrollView>

<LinearLayout
    android:id="@+id/totalRoomsPrice"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"


    android:layout_below="@id/scrollViewRooms"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textViewTotalRooms"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:textColor="@color/white"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/total_rooms"/>

    <TextView
        android:id="@+id/textViewTotalPrice"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:textColor="@color/white"
        android:layout_weight="1"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/total_price"/>

</LinearLayout>

    <Button
            android:id="@+id/btnApply"
            android:layout_below="@id/totalRoomsPrice"
            android:background="@color/buttonColor"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="30dp"

            android:text="@string/apply" />


</RelativeLayout>