<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.ac.iiitd.guestacc.FacultyRegistrationActivity">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"

        android:elevation="1dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="12dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="28dp"
        android:text="@string/year_of_joining"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="25dp"
        android:text="@string/email_idreg"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="36dp"
        android:text="@string/name"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="27dp"
        android:text="@string/request_for"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextEmail"
        android:layout_alignStart="@+id/editTextEmail"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editYearOfJoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@+id/textView2"
        android:ems="10"
        android:inputType="date"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignStart="@+id/editYearOfJoin"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textSize="15sp" />

    <Spinner
        android:id="@+id/spinFacultyStaff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignStart="@+id/editYearOfJoin"
        />

    <Button
        android:id="@+id/buttonSubmitRequest"
        android:layout_width="wrap_content"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinFacultyStaff"
        android:layout_marginTop="30dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:text="@string/submit_request" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>
