<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher_background"
    tools:context="in.ac.iiitd.guestacc.TypeLoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:contentDescription="@string/imgdetails"
                app:srcCompat="@drawable/img_def" />


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <RadioGroup
                    android:id="@+id/radioGroupLoginType"
                    android:layout_width="300dp"
                    android:layout_height="180dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginStart="2dp"
                    android:background="@drawable/custombtn1"
                    android:paddingEnd="5dp"
                    android:paddingStart="40dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <RadioButton
                        android:id="@+id/radioStudent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="1dp"
                        android:layout_marginStart="1dp"
                        android:layout_marginTop="1dp"
                        android:layout_weight="1"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:text="@string/student"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RadioButton
                        android:id="@+id/radioFaculty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="1dp"
                        android:layout_marginStart="1dp"
                        android:layout_marginTop="1dp"
                        android:layout_weight="1"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:text="@string/faculty_staff"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/radioStudent" />

                    <RadioButton
                        android:id="@+id/radioAdmin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="1dp"
                        android:layout_marginStart="1dp"
                        android:layout_marginTop="1dp"
                        android:layout_weight="1"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:text="@string/admin"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/radioFaculty" />

                </RadioGroup>

            </android.support.constraint.ConstraintLayout>


        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
